--- a/chess_stats/static/css/login_styles.css
+++ b/chess_stats/static/css/login_styles.css
@@ -11,12 +11,6 @@ body {
     text-align: center;
     line-height: 1;
 }
-/* #login-background { */
-/*     background-image: url('../img/login_background.png'); */
-/*     background-repeat:no-repeat; */
-/*     background-attachment:fixed; */
-/*     background-position:center center; */
-/* } */
 
 #navigation-background {
     opacity: 0.2;
@@ -38,6 +32,7 @@ body {
 }
 
 #navigation .links {
+    z-index: 1;
     position: fixed;
     top: 25%;
     left: 0;
@@ -49,7 +44,6 @@ body {
     text-align: center;
     width: 70px;
     height: 70px;
-    z-index: 9999;
 }
 
 #navigation .links div > p {
